--- a/Claudia/Mi parte.Rmd
+++ b/Claudia/Mi parte.Rmd
@@ -89,34 +89,713 @@ df = df[!duplicated(df),]
 rm(list=ls()[-7])
 ```
 
-## $\,$
+## FORWARD
 
-\maketitle
+```{r}
+modfor = step(lm(critical_temp ~ 1, data = df), direction = "forward",
+              scope = ~ std_ThermalConductivity + number_of_elements + range_fie +
+                  O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+                  wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+                  mean_FusionHeat + wtd_mean_ThermalConductivity +
+                  mean_ThermalConductivity + mean_Density + 
+                  wtd_range_atomic_radius +
+                  wtd_range_atomic_mass + Ca + wtd_range_fie + 
+                  range_ElectronAffinity +
+                  wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+                  wtd_entropy_ThermalConductivity + mean_atomic_mass +
+                  wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+                  entropy_ThermalConductivity)
 
-# Sección 1
-
-## R Markdown
-
-This is an R Markdown presentation. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document.
-
-## Slide with Bullets
-
--   Bullet 1
--   Bullet 2
--   Bullet 3
-
-## Slide with R Output
-
-```{r cars}
-summary(cars)
+summary(modfor)
 ```
 
-# Sección 2
+$R^{2}$ = 0.669
 
-## Slide with Plot
+## BACKWARD
 
-```{r pressure}
-plot(pressure, type = "l")
+```{r}
+modback = step(lm(critical_temp ~ std_ThermalConductivity + number_of_elements + 
+                      range_fie + O + Ba + Cu + range_atomic_mass + 
+                      wtd_range_Valence +
+                      wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+                      mean_FusionHeat + wtd_mean_ThermalConductivity +
+                      mean_ThermalConductivity + mean_Density + 
+                      wtd_range_atomic_radius +
+                      wtd_range_atomic_mass + Ca + wtd_range_fie + 
+                      range_ElectronAffinity +
+                      wtd_range_ElectronAffinity + range_Valence + 
+                      range_FusionHeat +
+                      wtd_entropy_ThermalConductivity + mean_atomic_mass +
+                      wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+                      entropy_ThermalConductivity, data = df),
+               direction = "backward")
+
+summary(modback)
 ```
+
+$R^{2}$ = 0.669
+
+## BACKWARD-FORWARD
+
+```{r}
+modambos = step(lm(critical_temp ~ std_ThermalConductivity + number_of_elements + 
+                       range_fie + O + Ba + Cu + range_atomic_mass + 
+                       wtd_range_Valence + wtd_mean_fie + wtd_entropy_fie+ 
+                       gmean_ThermalConductivity +
+                       mean_FusionHeat + wtd_mean_ThermalConductivity +
+                       mean_ThermalConductivity + mean_Density + 
+                       wtd_range_atomic_radius +
+                       wtd_range_atomic_mass + Ca + wtd_range_fie + 
+                       range_ElectronAffinity +
+                       wtd_range_ElectronAffinity + range_Valence + 
+                       range_FusionHeat +
+                       wtd_entropy_ThermalConductivity + mean_atomic_mass +
+                       wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+                       entropy_ThermalConductivity, data = df),
+                direction = "both")
+
+summary(modambos)
+```
+
+$R^{2}$ = 0.669
+
+## DROP1
+
+```{r}
+modover = lm(data = df, critical_temp ~ std_ThermalConductivity + 
+                 number_of_elements + range_fie + O + Ba + Cu + 
+                 range_atomic_mass + wtd_range_Valence +
+                 wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+                 mean_FusionHeat + wtd_mean_ThermalConductivity +
+                 mean_ThermalConductivity + mean_Density + 
+                 wtd_range_atomic_radius + wtd_range_atomic_mass + Ca + 
+                 wtd_range_fie + range_ElectronAffinity +
+                 wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+                 wtd_entropy_ThermalConductivity + mean_atomic_mass +
+                 wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+                 entropy_ThermalConductivity)
+
+drop1(modover, test = "Chisq")
+```
+
+Quitaremos la variable explicativa range_ElectronAffinity, ya que no es significativa.
+
+```{r}
+modover = update(modover, ~ std_ThermalConductivity + number_of_elements + range_fie +
+                     O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+                     wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+                     mean_FusionHeat + wtd_mean_ThermalConductivity +
+                     mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+                     wtd_range_atomic_mass + Ca + wtd_range_fie +
+                     wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+                     wtd_entropy_ThermalConductivity + mean_atomic_mass +
+                     wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+                     entropy_ThermalConductivity)
+
+drop1(modover, test = "Chisq")
+```
+
+Quitamos range_fie, por la misma razón anterior
+
+```{r}
+modover = update(modover, ~ std_ThermalConductivity + number_of_elements +
+                     O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+                     wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+                     mean_FusionHeat + wtd_mean_ThermalConductivity +
+                     mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+                     wtd_range_atomic_mass + Ca + wtd_range_fie +
+                     wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+                     wtd_entropy_ThermalConductivity + mean_atomic_mass +
+                     wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+                     entropy_ThermalConductivity)
+
+summary(modover)
+```
+
+Obtenemos de esta manera un $R^{2}$ igual a 0.669, igual a los anteriores modelos. Sin embargo, en este caso el modelo cuenta con dos variables explicativas menos.
+
+## ADD1
+
+```{r}
+mod0 = lm(critical_temp ~ 1, data = df)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+Agregamos a nuestro modelo como única vairable explicstiva std_ThermalConductivity, ya que es, de las más significativas, la con un AIC más bajo. 
+
+```{r}
+mod0 = update(mod0, ~ std_ThermalConductivity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+Según el mismo criterio anterior, agregamos al modelo Bario (Ba). Así lo iremos haciendo sucesivamente hasta encontrarnos con un modelo lo suficientemente bueno, utilizando la cantidad necesaria de variables explicativas.
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos number_of_elements
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos Calcio (Ca)
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_mean_ElectronAffinity
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos range_fie
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos range_Valence
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos range_atomic_mass
+
+```{r,echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_mean_ThermalConductivity
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos gmean_ThermalConductivity
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+
+```
+
+- Agregamos mean_ThermalConductivity
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos Oxígeno (O)
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+
+```
+
+- Agregamos wtd_range_atomic_mass
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos range_FusionHeat
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+
+```
+
+- Agregamos mean_FusionHeat
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos mean_Density
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos mean_atomic_mass
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_range_Valence
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+
+```
+
+- Agregamos mean_fie
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_entropy_ThermalConductivity
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos entropy_ThermalConductivity
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity +
+                  entropy_ThermalConductivity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos mean_atomic_radius
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity +
+                  entropy_ThermalConductivity + mean_atomic_radius)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_range_atomic_radius
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity +
+                  entropy_ThermalConductivity + mean_atomic_radius +
+                  wtd_range_atomic_radius)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_range_ElectronAffinity
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity +
+                  entropy_ThermalConductivity + mean_atomic_radius +
+                  wtd_range_atomic_radius + wtd_range_ElectronAffinity)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_mean_fie
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity +
+                  entropy_ThermalConductivity + mean_atomic_radius +
+                  wtd_range_atomic_radius + wtd_range_ElectronAffinity +
+                  wtd_mean_fie)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_entropy_fie
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity +
+                  entropy_ThermalConductivity + mean_atomic_radius +
+                  wtd_range_atomic_radius + wtd_range_ElectronAffinity +
+                  wtd_mean_fie + wtd_entropy_fie)
+
+add1(mod0, ~ std_ThermalConductivity + number_of_elements + range_fie +
+         O + Ba + Cu + range_atomic_mass + wtd_range_Valence +
+         wtd_mean_fie + wtd_entropy_fie + gmean_ThermalConductivity +
+         mean_FusionHeat + wtd_mean_ThermalConductivity +
+         mean_ThermalConductivity + mean_Density + wtd_range_atomic_radius +
+         wtd_range_atomic_mass + Ca + wtd_range_fie + range_ElectronAffinity +
+         wtd_range_ElectronAffinity + range_Valence + range_FusionHeat +
+         wtd_entropy_ThermalConductivity + mean_atomic_mass +
+         wtd_mean_ElectronAffinity + mean_atomic_radius + mean_fie +
+         entropy_ThermalConductivity, test = "Chisq")
+```
+
+- Agregamos wtd_range_fie
+
+```{r, echo = FALSE}
+mod0 = update(mod0, ~ std_ThermalConductivity + Ba + number_of_elements + Ca +
+                  wtd_mean_ElectronAffinity + range_fie + range_Valence +
+                  range_atomic_mass + wtd_mean_ThermalConductivity +
+                  gmean_ThermalConductivity + mean_ThermalConductivity + O +
+                  wtd_range_atomic_mass + range_FusionHeat + mean_FusionHeat +
+                  mean_Density + mean_atomic_mass + wtd_range_Valence +
+                  mean_fie + wtd_entropy_ThermalConductivity +
+                  entropy_ThermalConductivity + mean_atomic_radius +
+                  wtd_range_atomic_radius + wtd_range_ElectronAffinity +
+                  wtd_mean_fie + wtd_entropy_fie + wtd_range_fie)
+
+summary(mod0)
+
+```
+
+$R^{2}$ = 0.6689. En este caso utilizamos 27 variables explicativas. 
